--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,118 @@
-.App {
-  text-align: center;
-}
 
+
+/****Login*****/
 .errors{
   color: red;
+  font-size: small;
 }
+#input{
+  margin: 0 auto;
+}
+.rWrap{
+    width: 200px;
+    height: 60%;
+    background-color: rgb(241, 243, 242);
+    opacity: 0.75;
+    display: flex;
+    flex-direction: column;
+    font-family: "Nunito Sans", sans-serif;
+    padding: 2% 5% 5%;
+    
+}
+button{
+  width: 100px;
+  display: inline-block;
+  padding: 8px 11px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 5px;
+  letter-spacing: 2px;
+  outline: none;
+  background-color: rgb(35, 91, 45);
+  background-image: linear-gradient(to right, #13b350, #054b2a);
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+#login{
+  text-decoration: none;
+  width: 150px;
+  display: inline-block;
+  padding: 8px 11px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 5px;
+  letter-spacing: 2px;
+  outline: none;
+  background-color: rgb(35, 91, 45);
+  background-image: linear-gradient(to right, #13b350, #054b2a);
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.pure-form{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    text-align: center;
+    margin-top: 40%;
+    margin-left: 550px
+    
+}
+
+
+.Register{
+  height: 100vh;
+    background-image: url(./components/plants.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+
+
+/********LOGIN*********/
+.lWrap{
+  width: 200px;
+  height: 60%;
+  background-color: rgb(241, 238, 238);
+  opacity: 0.75;
+  display: flex;
+  flex-direction: column;
+  font-family: "Nunito Sans", sans-serif;
+  padding: 2% 5% 5%;
+}
+#registerButton{
+  text-decoration: none;
+  width: 150px;
+  display: inline-block;
+  padding: 8px 11px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 5px;
+  letter-spacing: 2px;
+  outline: none;
+  background-color: rgb(35, 91, 45);
+  background-image: linear-gradient(to right, #13b350, #054b2a);
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.Login{
+  height: 100vh;
+    background-image: url(./components/plants.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+/*********PLANTSLIST********/
+.list{
+  
+}
+
 
