--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,40 @@
 
-
+.pure-form{
+  position: absolute;
+  top: 25%;
+  left: 43%;
+  width: min-content;
+  text-align: center;
+}
 /****Login*****/
 .errors{
   color: red;
   font-size: small;
 }
-#input{
-  margin: 0 auto;
-}
-.rWrap{
-    width: 200px;
-    height: 60%;
-    background-color: rgb(241, 243, 242);
-    opacity: 0.75;
-    display: flex;
-    flex-direction: column;
-    font-family: "Nunito Sans", sans-serif;
-    padding: 2% 5% 5%;
-    
-}
 button{
-  width: 100px;
+  width: 80px;
   display: inline-block;
   padding: 8px 11px;
   font-size: 1.2rem;
   text-transform: uppercase;
-  border: 0;
+  border: 1.5px solid rgb(255, 255, 255);
   border-radius: 5px;
   letter-spacing: 2px;
   outline: none;
-  background-color: rgb(35, 91, 45);
-  background-image: linear-gradient(to right, #13b350, #054b2a);
+  background-color: rgb(30, 70, 37);
+  background-image: linear-gradient(to left, #37c56d, #07693c);
   color: #fff;
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 #login{
   text-decoration: none;
-  width: 150px;
+  width: 65px;
   display: inline-block;
   padding: 8px 11px;
   font-size: 1.2rem;
   text-transform: uppercase;
-  border: 0;
+  border: 1.5px solid rgb(255, 255, 255);
   border-radius: 5px;
   letter-spacing: 2px;
   outline: none;
@@ -52,17 +44,14 @@ button{
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-.pure-form{
+/* .pure-form{
     display: flex;
     flex-direction: column;
     align-content: center;
     text-align: center;
     margin-top: 40%;
     margin-left: 550px
-    
-}
-
-
+} */
 .Register{
   height: 100vh;
     background-image: url(./components/plants.jpg);
@@ -70,12 +59,8 @@ button{
     background-attachment: fixed;
     background-size: cover;
 }
-
-
-
-
 /********LOGIN*********/
-.lWrap{
+/* .lWrap{
   width: 200px;
   height: 60%;
   background-color: rgb(241, 238, 238);
@@ -84,15 +69,15 @@ button{
   flex-direction: column;
   font-family: "Nunito Sans", sans-serif;
   padding: 2% 5% 5%;
-}
+} */
 #registerButton{
   text-decoration: none;
-  width: 150px;
+  width: 95px;
   display: inline-block;
   padding: 8px 11px;
   font-size: 1.2rem;
   text-transform: uppercase;
-  border: 0;
+  border: 1.5px solid rgb(255, 255, 255);
   border-radius: 5px;
   letter-spacing: 2px;
   outline: none;
@@ -110,11 +95,23 @@ button{
     background-size: cover;
 }
 
-/*********PLANTSLIST********/
-.list{
-  
+/*********AddPlant********/
+.add{
+  margin-top: 10%;
 }
-
+.plantWrap{
+    /* background: url(./components/pawel-czerwinski-lWBZ01XRRoI-unsplash.jpg); */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 1024px;
+    /* Set up proportionate scaling */
+    width: 100%;
+    /* Set up positioning */
+    position: fixed;
+}
 
 .card{
   padding: 20px;
@@ -125,6 +122,7 @@ button{
   flex-direction: column;
   border-radius: 6px;
 }
+
 .wrapper{
   display: flex;
   flex-wrap: wrap;
@@ -150,5 +148,9 @@ background-image: linear-gradient(to right, red, crimson);
 }
 #plimg{
   height: 220px;
+  margin-bottom: 20px;
+}
+#input{
+  margin-top: 20px;
   margin-bottom: 20px;
 }
